# retdec

scripts/: retdec-decompiler.sh
src/: CMakeLists.txt
src/libbin2llvmir/: CMakeLists.txt  libbin2llvmir.cpp
toolchains/: i686-linux-gnu.toolchain.cmake
